# ruqu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
cli/: CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
cli/.claude/: settings.json
cli/.claude-plugin/: plugin.json
cli/.claude/skills/evolve/: SKILL.md
cli/.harness/: manifest.json  manifest.sha256
cli/__tests__/: smoke.test.ts
cli/src/: init.ts
cli/src/agents/: experimenter.ts  federator.ts  hypothesizer.ts
cli/wasm/: ruqu_wasm.d.ts  ruqu_wasm.js  ruqu_wasm_bg.wasm  ruqu_wasm_bg.wasm.d.ts
crates/ruQu/: Cargo.toml  README.md
crates/ruQu/benches/: memory_bench.rs  mincut_bench.rs  scaling_bench.rs  throughput_bench.rs
crates/ruQu/examples/: coherence_gate_breakthrough.rs  coherence_simulation.rs  early_warning_validation.rs  integrated_qec_simulation.rs  mwpm_comparison_benchmark.rs  quantum_fabric_basic.rs  validated_coherence_gate.rs
crates/ruQu/src/: adaptive.rs  attention.rs  decoder.rs  fabric.rs  filters.rs  lib.rs  metrics.rs  mincut.rs  parallel.rs  schema.rs  stim.rs  syndrome.rs  tile.rs  traits.rs  types.rs
crates/ruQu/tests/: filter_tests.rs  integration_tests.rs  stress_tests.rs  syndrome_tests.rs  tile_tests.rs
crates/ruqu-agent/: Cargo.toml  README.md
crates/ruqu-agent/src/: lib.rs  self_consistency.rs
crates/ruqu-agent/tests/: consensus_bench.rs
crates/ruqu-algorithms/: Cargo.toml
crates/ruqu-algorithms/src/: lib.rs  qaoa.rs  surface_code.rs  vqe.rs
crates/ruqu-algorithms/tests/: test_algorithms.rs
crates/ruqu-console-wasm/: Cargo.toml  README.md
crates/ruqu-console-wasm/src/: lib.rs
crates/ruqu-core/: Cargo.toml  README.md
crates/ruqu-core/benches/: quantum_sim.rs
crates/ruqu-core/src/: benchmark.rs  clifford_t.rs  confidence.rs  control_theory.rs  decoder.rs  decomposition.rs  error.rs  gate.rs  hardware.rs  lib.rs  mitigation.rs  mixed_precision.rs  noise.rs  pipeline.rs  planner.rs  qasm.rs  qec_scheduler.rs  replay.rs  simd.rs  simulator.rs  stabilizer.rs  state.rs  subpoly_decoder.rs  tensor_network.rs  transpiler.rs  verification.rs  witness.rs
crates/ruqu-core/tests/: test_gates.rs  test_state.rs
crates/ruqu-exotic/: Cargo.toml
crates/ruqu-exotic/src/: interference_search.rs  lib.rs  quantum_collapse.rs  quantum_decay.rs  reality_check.rs  reasoning_qec.rs  reversible_memory.rs  swarm_interference.rs  syndrome_diagnosis.rs
crates/ruqu-exotic/tests/: test_discovery_cross.rs  test_discovery_phase2.rs  test_discovery_pipeline.rs  test_exotic.rs
crates/ruqu-possibility/: Cargo.toml  README.md
crates/ruqu-possibility/src/: error.rs  field.rs  gate.rs  lib.rs  receipt.rs  runtime.rs
crates/ruqu-possibility/tests/: possibility_tests.rs
crates/ruqu-rag/: Cargo.toml  README.md
crates/ruqu-rag/src/: eval.rs  lib.rs
crates/ruqu-rag/tests/: eval_tests.rs  rag_tests.rs
crates/ruqu-receipts/: Cargo.toml  README.md
crates/ruqu-receipts/src/: lib.rs
crates/ruqu-receipts/tests/: receipts_tests.rs
crates/ruqu-sensing/: Cargo.toml  README.md
crates/ruqu-sensing/src/: lib.rs
crates/ruqu-sensing/tests/: sensing_tests.rs
crates/ruqu-wasm/: Cargo.toml  README.md
crates/ruqu-wasm/src/: lib.rs
docs/adr/: ADR-001-metaharness-cli.md  ADR-258-structural-possibility-runtime.md
docs/research/: sota-landscape.md
web/: README.md  index.html  styles.css
web/js/: data.js  main.js  util.js  wasm.js  ws.js
web/js/panels/: clifford.js  field.js  overview.js  quantum.js  rag.js  receipts.js  sensing.js  swarm.js
web/server-example/: README.md  package.json  server.js
