[workspace]
resolver = "2"
members = ["crates/ruqu-core", "crates/ruqu-algorithms", "crates/ruqu-exotic", "crates/ruqu-wasm", "crates/ruQu", "crates/ruqu-possibility", "crates/ruqu-rag", "crates/ruqu-agent", "crates/ruqu-receipts", "crates/ruqu-sensing", "crates/ruqu-console-wasm"]

[workspace.package]
version = "2.2.3"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/ruvnet/ruqu"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
js-sys = "0.3"
proptest = "1.5"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
wasm-bindgen = "0.2"
