[package]
name = "ruqu-possibility"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Structural possibility runtime for agentic AI - possibility fields, interference scoring, coherence gating, and auditable collapse receipts (ADR-258)"
keywords = ["ai", "possibility", "coherence", "agents", "receipts"]
categories = ["science", "algorithms", "data-structures"]

[features]
default = ["std"]
std = []

[dependencies]
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
