[package]
name = "ruqu-receipts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Auditable collapse logs, replay logs, and governance evidence for the structural possibility runtime (ADR-258)"
keywords = ["ai", "audit", "receipts", "governance", "replay"]
categories = ["science", "algorithms"]

[features]
default = ["std"]
std = []

[dependencies]
ruqu-possibility = { version = "0.1.0", path = "../ruqu-possibility" }
anyhow = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
